# ecommerce-nuxtjs-fastapi-backend

./: .env  .gitignore  Dockerfile  LICENSE  pyproject.toml
app/: database.py  main.py
backend/: README.md  __init__.py  docker-compose.yaml
backend/app/: __init__.py  admin.py  database.py  helpers.py  main.py  schemas.py
backend/app/core/: config.py
backend/migrations/versions/: 0508f9ca0879_update_users_table.py
backend/order/: models.py  schemas.py
backend/order/api/: v1.py
backend/product/: crud.py  helpers.py  models.py  schemas.py
backend/product/api/: controller.py  v1.py
backend/tests/: __init__.py  conftest.py  test_users_api.py  test_users_authenticate.py
backend/users/: __init__.py  authentication.py  crud.py  models.py  schemas.py
backend/users/api/: controller.py
migrations/: env.py
migrations/versions/: 24fbe3357f8a_create_category_and_product_models.py  43774c187998_add_users_table.py  4491feeecdec_update_product_model.py  50de39b69cb9_add_users_table.py  7967edfd9f18_update_users_table.py  8e35694be576_added_order_and_orderitem_tables.py  e7abfa02496c_update_product_model_2.py  fb488e2be728_update_products_table.py
users/: __init__.py  authentication.py  crud.py  models.py  schemas.py
users/api/: controller.py  v1.py
